--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DB_URL = mongodb+srv://khaledhussein957:%40KHaled12@cluster0.joc3gen.mongodb.net/
 
-SECRET_KEY = 
+SECRET_KEY = AIb6d34fhJ04O9pXqlQNla2jxCH9kuLz
